<resources>
    <string name="app_name">Sticker Maker</string>
    <string name="tray_image_content_description">Sticker Pack Tray Image</string>
    <string name="more_info_button">More info about sticker pack</string>
    <string name="add_to_whatsapp">Add to WhatsApp</string>
    <string name="add_button_content_description">Add sticker pack to WhatsApp</string>
    <string name="title_activity_sticker_packs_list">Sticker Packs</string>
    <string name="dot">•</string>
    <string name="title_activity_sticker_pack_details_single_pack">Sticker Pack</string>
    <string name="title_activity_sticker_pack_details_multiple_pack">Sticker details</string>
    <string name="title_activity_sticker_pack_info">Info</string>
    <string name="view_webpage">View webpage</string>
    <string name="send_email">Send email</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="error_adding_sticker_pack">Could not add this sticker pack. Please install the latest version of
        WhatsApp before adding sticker pack
    </string>
    <string name="error_message">Error: %s \nSee logcat for stack trace.</string>
    <string name="title_validation_error">Error with the pack</string>
    <string name="info_screen_tray_icon">Tray icon</string>
    <string name="details_pack_already_added">Sticker pack added to WhatsApp</string>
    <string name="info_send_email_to_prompt">Send email with</string>
    <string name="add_pack_fail_prompt_update_whatsapp">Sticker pack not added. If you\'d like to add it, make sure you
        update to the latest version of WhatsApp.
    </string>
    <string name="add_pack_fail_prompt_update_play_link">Update</string>
    <string name="cannot_find_play_store">Google Play is not installed on the device.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_new_sticker_pack">New sticker pack</string>

    <!-- Strings related to NewStickerPackActivity -->
    <string name="prompt_name">Name</string>
    <string name="prompt_author">Author</string>
    <string name="create_sticker_pack">Select images</string>
    <string name="create_sticker_button">Create sticker</string>

    <!--Background remover -->
    <string name="intro_magic_title">Automatic background clearing</string>
    <string name="intro_manual_title">Manual background clearing</string>
    <string name="intro_zoom_title">Zooming and Moving the picture</string>
    <string name="intro_magic_description">Use the Magic Wand tool and touch parts of the background you want to erase
    </string>
    <string name="intro_manual_description">Use the Pencil tool to erase the background dragging your finger around the
        screen
    </string>
    <string name="intro_zoom_description">Use the Magnifier tool to Zoom in/out so you can make better cuts</string>
    <string name="intro_label">Quick look</string>
    <string name="image_chooser_message">Choose an image to cut</string>
    <string name="sticker_maker">Sticker Maker</string>
    <string name="by_sticker_central">made by D4rK!</string>
    <string name="great">Great</string>
    <string name="sticker">Sticker</string>
    <string name="maker">Maker</string>








    <plurals name="title_activity_sticker_packs_list">
        <item quantity="one" translatable="false">Sticker Pack:</item>
        <item quantity="other" translatable="false">Sticker Packs:</item>
    </plurals>
    <string name="license_agreement" translatable="false">License agreement.</string>
    <string name="sticker_pack_animation_indicator">Animated sticker pack!</string>
    <string name="sticker_pack_details_tap_to_preview" >Tap to preview sticker.</string>
    <string name="made_by_d4rk">made by D4rK</string>
    <string name="your_sticker_packs">Your Sticker Packs</string>
    <string name="create_stickers">Create Stickers</string>
    <string name="sticker_central">Sticker Central</string>
    <string name="toon_central">D4rK Cleaner</string>
    <string name="more">More</string>
    <string name="people">Adrian c8chilu Beșină a.k.a UnderPenis69 a.k.a UnderBenis96</string>
    <string name="thanks_to">Thanks to:</string>
    <string name="no_stickers_selected">No stickers selected</string>
    <string name="create_new_sticker_pack">Create New Sticker Pack</string>
    <string name="select_images">SELECT IMAGES</string>
    <string name="eraser_size">Eraser size:</string>
    <string name="we_need_some_permissions_to_work_with_stickers">We need some permissions to work with stickers.</string>
    <string name="grant_access">Grant access</string>
    <string name="delete">Delete</string>
    <string name="options">Options</string>
    <string name="show_some_support">Show some support</string>
    <string name="share">Share</string>
    <string name="about_us">About Us</string>
</resources>
