<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginStart="6dp"
    android:layout_marginEnd="6dp"
    android:layout_marginTop="2dp"
    android:layout_marginBottom="2dp"
    app:cardCornerRadius="10dp"
    app:cardUseCompatPadding="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:orientation="vertical">
                <TextView
                    style="@style/InfoButtonStyle"
                    android:id="@+id/tray_icon"
                    android:clickable="false"
                    android:text="@string/info_screen_tray_icon"
                    android:textColor="#673AB7"
                    tools:drawableLeft="@drawable/ic_web"
                    tools:drawableStart="@drawable/ic_web"/>
                <TextView
                    style="@style/InfoButtonStyle"
                    android:id="@+id/view_webpage"
                    android:text="@string/view_webpage"
                    app:drawableStartCompat="@drawable/ic_web"/>
                <TextView
                    style="@style/InfoButtonStyle"
                    android:id="@+id/send_email"
                    android:text="@string/send_email"
                    app:drawableStartCompat="@drawable/ic_mail"/>
                <TextView
                    style="@style/InfoButtonStyle"
                    android:id="@+id/license_agreement"
                    android:text="@string/license_agreement"
                    app:drawableStartCompat="@drawable/ic_license"/>
                <TextView
                    style="@style/InfoButtonStyle"
                    android:id="@+id/privacy_policy"
                    android:text="@string/privacy_policy"
                    app:drawableStartCompat="@drawable/ic_policy"/>
        </LinearLayout>
</com.google.android.material.card.MaterialCardView>