<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:scrollbars="none"
    android:layout_margin="12dp"
    android:paddingTop="10dp"
    android:background="@drawable/rounded_corner"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView
        android:id="@+id/blackicon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:src="@drawable/ic_sticker_maker_logo"
        tools:ignore="ContentDescription" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:typeface="monospace"
            android:layout_below="@id/blackicon"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:id="@+id/appname"
            android:text="@string/sticker_maker"/>
    <TextView
        android:id="@+id/compname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/appname"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/by_sticker_central"
        android:textSize="12sp"
        android:typeface="monospace"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/compname"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/rounded_corner"
        android:text="@string/great"
        android:textSize="14sp"/>
    <TextView
        android:id="@+id/thanks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/appname"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="125dp"
        android:text="@string/thanks_to"
        android:textSize="12sp"
        android:typeface="monospace"/>
    <TextView
        android:id="@+id/people"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/appname"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="145dp"
        android:text="@string/people"
        android:textSize="12sp"
        android:typeface="monospace"/>
</RelativeLayout>