<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:orientation="horizontal"
            android:padding="14dp"
            android:paddingStart="18dp"
            android:focusable="true"
            tools:ignore="RtlSymmetry">
            <ImageView
                android:id="@+id/accountpic"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="6dp"
                android:clickable="true"
                android:src="@drawable/ic_sticker_maker_logo"
                tools:ignore="ContentDescription"
                android:focusable="true" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-10dp"
                android:clickable="true"
                android:orientation="vertical"
                android:padding="16dp"
                android:focusable="true">
                <TextView
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_16"
                    android:layout_marginEnd="@dimen/dp_16"
                    android:clickable="true"
                    android:fontFamily="@font/google_sans"
                    android:gravity="top|center_vertical"
                    android:paddingStart="4dp"
                    android:text="@string/sticker_maker"
                    android:textSize="18sp"
                    android:focusable="true" />
                <TextView
                    android:id="@+id/userid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_16"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="@dimen/dp_16"
                    android:clickable="true"
                    android:paddingStart="4dp"
                    android:text="@string/made_by_d4rk"
                    android:textColor="#424242"
                    android:textSize="12sp"
                    android:focusable="true" />
            </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="0.4dp"
            android:layout_marginBottom="10dp" />
        <TextView
            android:id="@+id/make"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_16"
            android:background="@drawable/ripple_text"
            android:clickable="true"
            android:drawableStart="@drawable/ic_new_folder"
            android:drawablePadding="@dimen/dp_32"
            android:gravity="start|center_vertical"
            android:paddingStart="22dp"
            android:text="@string/your_sticker_packs"
            android:textSize="15sp"
            android:focusable="true"
            app:drawableStartCompat="@drawable/ic_new_folder"
            tools:ignore="RtlSymmetry,UseCompatTextViewDrawableXml" />
        <TextView
            android:id="@+id/share"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_16"
            android:background="@drawable/ripple_text"
            android:clickable="true"
            android:drawablePadding="@dimen/dp_32"
            android:gravity="start|center_vertical"
            android:paddingStart="22dp"
            android:text="@string/create_stickers"
            android:textSize="15sp"
            android:focusable="true"
            app:drawableLeftCompat="@drawable/ic_pen"
            app:drawableStartCompat="@drawable/ic_pen"
            tools:ignore="RtlSymmetry" />
        <TextView
            android:id="@+id/license"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_16"
            android:background="@drawable/ripple_text"
            android:clickable="true"
            android:drawablePadding="@dimen/dp_32"
            android:gravity="start|center_vertical"
            android:paddingStart="22dp"
            android:text="@string/sticker_central"
            android:textSize="15sp"
            android:focusable="true"
            app:drawableStartCompat="@drawable/ic_link"
            tools:ignore="RtlSymmetry" />
        <TextView
            android:id="@+id/feedback"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_16"
            android:background="@drawable/ripple_text"
            android:clickable="true"
            android:drawablePadding="@dimen/dp_32"
            android:gravity="start|center_vertical"
            android:paddingStart="22dp"
            android:text="@string/toon_central"
            android:textSize="15sp"
            android:focusable="true"
            app:drawableStartCompat="@drawable/ic_link"
            app:drawableLeftCompat="@drawable/ic_link"
            tools:ignore="RtlSymmetry" />
        <TextView
            android:id="@+id/about"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_16"
            android:background="@drawable/ripple_text"
            android:clickable="true"
            android:drawablePadding="@dimen/dp_32"
            android:gravity="start|center_vertical"
            android:paddingStart="22dp"
            android:text="@string/more"
            android:textSize="15sp"
            app:drawableLeftCompat="@drawable/ic_more"
            app:drawableStartCompat="@drawable/ic_more"
            android:focusable="true"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>